--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       <title>Demo App</title>
       <link rel="icon" type="image/png" href="/favicon.png" />
       <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-      <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.<%= process.env.NODE_ENV %>.js"></script>
+      <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
    </head>
    <body>
       <div id="app"></div>
